Updating various pages

--- a/src/app/ui/about/about.component.html
+++ b/src/app/ui/about/about.component.html
@@ -3,7 +3,7 @@
   <div class="jumbotron">
     <div class="animated fadeIn">
       <p>Hi! My name is Nick Palmer. I am a fourth-year Computer Science & Engineering student at Ohio State and will be graduating
-        in May of 2020. After graduation, I plan to relocate to the Chicagoland area.
+        in May of 2020. After graduation, I will be moving to Chicago, IL to start my software career with ICF Next.
       </p>
       <p>My interest in software development began my sophomore year of high school when I took an introduction to Java course.
         Since then, I have tried to learn about as many areas of computer science and software development as I can. Feel
@@ -11,8 +11,8 @@
       </p>
 
       <p>
-        While many of my experiences are related to web development, I am very open to any other areas of software development. Please
-        feel free to reach out if you know of any potential openings or would like to discuss my qualifications further.
+        I'm very excited to experience life in Chicago and to get my full-time software development career started. Please feel free to contact me regarding
+        any software events or meetups in the Columbus, OH or Chicago, IL areas.
       </p>
 
     </div>
