--- a/src/app/ui/resume/resume.component.html
+++ b/src/app/ui/resume/resume.component.html
@@ -60,7 +60,7 @@
     <h3>ACTIVITIES</h3>
     <div class="animated fadeIn">
       <p>Ohio State Hackathon (Hack OHI/O) participant</p>
-      <p>November 2016, October 2017, October 2018</p>
+      <p>November 2016, October 2017, October 2018, November 2019</p>
     </div>
   </div>
 </app-layout>
