--- a/src/app/ui/projects/projects.component.html
+++ b/src/app/ui/projects/projects.component.html
@@ -33,8 +33,8 @@
       <div class="card-body">
         <div class="animated fadeIn">
           <h5 class="card-title">FPD Stats</h5>
-          <p class="card-text">Summer 2019</p>
-          <p class="card-text">FPD Stats is a very early-stage statistics tracking project. Over the next few months, a friend and I will
+          <p class="card-text">Early 2020</p>
+          <p class="card-text">FPD Stats is a statistics tracking project. Over the next few months, a friend and I will
             be building out an application that shows shots on goal and other statistics on a hockey rink. A UI for 
             the game statistics recorder will be built to allow drag and drop actions that replicate on the end-user's screen.
           </p>
