--- a/src/app/ui/home/home.component.html
+++ b/src/app/ui/home/home.component.html
@@ -30,16 +30,32 @@
 <div class="resume-container">
   <!-- TODO: put where I've worked
   And download resume button below it -->
-  <div style="width: 100vw">Places I've worked (this needs to be in its own row)</div>
-  <div class="row">
+  <!-- <div style="width: 100vw">Places I've worked (this needs to be in its own row)</div> -->
+  <div class="row resume-list">
+    <h1 class="resume-title">
+      Places I've Worked
+    </h1>
+    <a href="https://transportation.ohio.gov/">
     <img class="job-logo" src="../../../assets/img/odot.png"/>
+    </a>
+    <a href="https://buildinmotion.com/">
     <img class="job-logo" src="../../../assets/img/build-in-motion.png"/>
+    </a>
+    <a href="https://www.hondaresearch.com/">
     <img class="job-logo" src="../../../assets/img/honda.png"/>
+    </a>
+    <a href="https://www.thedevshop.com/">
     <img class="job-logo" src="../../../assets/img/the-dev-shop.png"/>
+    </a>
+    <div class="button-container">
+    <button class="resume-button">Download Resume</button>
+  </div>
   </div>
   <!--Put in download resume button-->
 </div>
-<div class="contact-container">contact placeholder</div>
+<div class="contact-container">
+  <p style="text-align: center; color: white;">In progress</p>
+</div>
 <div class="projects-container">projects placeholder</div>
 <router-outlet></router-outlet>
 <!--todo: split up components/containers-->
