change back to old routing

--- a/src/app/ui/about/about.component.html
+++ b/src/app/ui/about/about.component.html
@@ -1,20 +1,9 @@
 <app-layout>
-  <h1 class="text-center text-white">About Me</h1>
-  <div class="jumbotron">
-    <div class="animated fadeIn">
-      <p>Hi! My name is Nick Palmer. I am a fourth-year Computer Science & Engineering student at Ohio State and will be graduating
-        in May of 2020. After graduation, I will be moving to Chicago, IL to start my software career with ICF Next.
-      </p>
-      <p>My interest in software development began my sophomore year of high school when I took an introduction to Java course.
-        Since then, I have tried to learn about as many areas of computer science and software development as I can. Feel
-        free to take a look at my <a routerLink="/resume">resume page</a> to see some of my previous academic and internship experiences.
-      </p>
-
-      <p>
-        I'm very excited to experience life in Chicago and to get my full-time software development career started. Please feel free to contact me regarding
-        any software events or meetups in the Columbus, OH or Chicago, IL areas.
-      </p>
-
-    </div>
+    <div class="animated fadeIn about-me-container">
+      <div class="about-content">
+        <span class="about-sentence">My name is Nick Palmer and I'm a software developer.<br></span>
+        <span class="middle-sentence">In May 2020, I graduated with a Bachelor of Science in Computer Science & Engineering from The Ohio State University.</span>
+        <br><span class="about-sentence">I now live in Chicago, IL.</span>
+  </div>
   </div>
 </app-layout>
