--- a/src/app/ui/footer/footer.component.html
+++ b/src/app/ui/footer/footer.component.html
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-light bg-primary mt-5">
+<nav class="navbar navbar-dark bg-dark mt-5">
   <div class="navbar-expand m-auto navbar-text">
-    Last Updated 12/31/2019
+    Last Updated 5/9/2020
   </div>
 </nav>
