--- a/src/app/ui/layout/layout.component.html
+++ b/src/app/ui/layout/layout.component.html
@@ -1,7 +1,4 @@
-<div style="min-height: 87.5%;">
-<div class="container">
+<app-header></app-header>
   <ng-content></ng-content>
-</div>
-</div>
 <app-footer></app-footer>
 
