--- a/src/app/ui/about/about.component.css
+++ b/src/app/ui/about/about.component.css
@@ -3,3 +3,22 @@
     font-family: "Courier New";
 }
 
+.about-content {
+    font-size: 3vw;
+    text-align: justify;
+    padding: 10vw;
+}
+
+.about-me-container {
+    background-color: #2a4158;
+    width: 100vw;
+    height: 80vh;
+}
+
+.about-sentence {
+    color: gray;
+}
+
+.middle-sentence {
+    color: #bd1e2c;
+}
