more style changes

--- a/src/app/ui/about/about.component.css
+++ b/src/app/ui/about/about.component.css
@@ -4,15 +4,13 @@
 }
 
 .about-content {
-    font-size: 3vw;
-    text-align: justify;
+    font-size: 2em;
+    text-align: start;
     padding: 10vw;
 }
 
 .about-me-container {
     background-color: #2a4158;
-    width: 100vw;
-    height: 80vh;
 }
 
 .about-sentence {
