--- a/src/app/ui/about/about.component.html
+++ b/src/app/ui/about/about.component.html
@@ -1,5 +1,5 @@
 <app-layout>
-    <div class="animated fadeIn about-me-container">
+    <div class="animated fadeup about-me-container">
       <div class="about-content">
         <span class="about-sentence">My name is Nick Palmer and I'm a software developer.<br></span>
         <span class="middle-sentence">In May 2020, I graduated with a Bachelor of Science in Computer Science & Engineering from The Ohio State University.</span>
