--- a/src/app/ui/contact/contact.component.html
+++ b/src/app/ui/contact/contact.component.html
@@ -1,45 +1,4 @@
 <app-layout>
-  <h1 class="text-center text-white">Personal/School Projects</h1>
-  <div class="row" style="margin-bottom: 100px;">
-    <div class="card bg-success col-lg-4">
-      <img class="card-img-top" src="assets/img/personal_site.png">
-      <div class="card-body">
-        <div class="animated fadeIn">
-          <h5 class="card-title">My Website</h5>
-          <p class="card-text">Created January 2019</p>
-          <p class="card-text">Created this website to serve as a way of demonstrating my past software development experiences.
-            Built in Angular with Bootstrap and TypeScript.
-          </p>
-        </div>
-      </div>
-    </div>
-    <div class="card bg-primary col-lg-4">
-      <img class="card-img-top" src="assets/img/mario1.png">
-      <div class="card-body">
-        <div class="animated fadeIn">
-          <h5 class="card-title">Super Mario Bros Recreation in C#</h5>
-          <p class="card-text">January 2019 - April 2019</p>
-          <p class="card-text">Using C#, Visual Studio, and Monogame my group recreated multiple levels of the original Super Mario Bros game during the Spring
-            2019 semester.
-          </p>
-          <div class="text-center">
-            <a href="http://web.cse.ohio-state.edu/~boggus.2/3902/" class="btn btn-success">Course Website</a>
-          </div>
-        </div>
-      </div>
-    </div>
-     <div class="card bg-success col-lg-4">
-      <img class="card-img-top" src="assets/img/fpd_stats.png">
-      <div class="card-body">
-        <div class="animated fadeIn">
-          <h5 class="card-title">FPD Stats</h5>
-          <p class="card-text">Early 2020</p>
-          <p class="card-text">FPD Stats is a statistics tracking project. Over the next few months, a friend and I will
-            be building out an application that shows shots on goal and other statistics on a hockey rink. A UI for 
-            the game statistics recorder will be built to allow drag and drop actions that replicate on the end-user's screen.
-          </p>
-        </div>
-      </div>
-    </div>
-  </div>
+  <h1 class="text-center">Contact</h1>
+  
 </app-layout>
