--- a/src/app/ui/experience/experience.component.css
+++ b/src/app/ui/experience/experience.component.css
@@ -1,22 +1,11 @@
 .experience-list {
-    width: 100vw;
     align-items: center;
     align-content: center;
     justify-items: center;
     display: flex;
     justify-content: space-around;
     flex-direction: row;
-}
-
-.experience-container {
-    width: 100vw;
-    height: 100vh;
-    align-items: center;
-    align-content: center;
-    justify-items: center;
-    display: flex;
-    justify-content: space-around;
-    flex-direction: column;
+    padding: 25px;
 }
 
 .experience-title {
@@ -30,7 +19,9 @@
     background-color: #bd1e2c;
     color: black;
     width: 20vw;
+    min-width: 250px;
     height: 5vh;
+    min-height: 100px;
 }
 
 .experience-container {
@@ -44,7 +35,7 @@
 
 .job-logo {
     max-width: 175px;
-    margin: 3vw;
+    margin: 25px;
 }
 
 .job-logo:hover {
