--- a/src/app/ui/experience/experience.component.html
+++ b/src/app/ui/experience/experience.component.html
@@ -1,7 +1,5 @@
 <app-layout>
-    <!-- TODO: put where I've worked
-    And download experience button below it -->
-    <!-- <div style="width: 100vw">Places I've worked (this needs to be in its own row)</div> -->
+  <div class="animated fadeup experience-container">
     <div class="row experience-list">
       <h1 class="experience-title">
         Places I've Worked
@@ -23,5 +21,6 @@
     <div class="button-container row experience-list">
       <button class="experience-button">Download Resume</button>
     </div>
+  </div>
     <!--Put in download experience button-->
 </app-layout>
