--- a/src/app/ui/header/header.component.html
+++ b/src/app/ui/header/header.component.html
@@ -1,12 +1,11 @@
 <nav class="navbar navbar-dark bg-dark mb-5">
   <a class="navbar-brand" routerLink="/home">Nick Palmer</a>
-  <div class="navbar-expand mr-auto">
+  <div class="navbar-expand navbar-nav">
     <div class="navbar-nav">
       <a routerLink="/home" class="nav-item nav-link">Home</a>
       <a routerLink="/about" class="nav-item nav-link">About</a>
       <a routerLink="/experience" class="nav-item nav-link">Experience</a>
       <a routerLink="/projects" class="nav-item nav-link">Projects</a>
-      <a routerLink="/contact" class="nav-item nav-link">Contact</a>
     </div>
   </div>
   <div class="navbar-expand navbar-nav">
@@ -20,5 +19,11 @@
         <i class="fa fa-lg fa-github"></i>
       </a>
     </div>
+    <div class="navbar-nav">
+      <a class="nav-item nav-link" routerLink="/contact">
+        <i class="fa fa-lg fa-envelope"></i>
+      </a>
+    </div>
   </div>
 </nav>
+
