--- a/src/app/ui/home/home.component.html
+++ b/src/app/ui/home/home.component.html
@@ -1,5 +1,5 @@
 <app-layout>
-  <div class="row image">
-    <img class="home-logo" src="../../../assets/img/logo.png"/>
+  <div class="image">
+    <img class="home-logo animated fadein" src="../../../assets/img/logo.png"/>
   </div>
 </app-layout>
