--- a/src/app/ui/layout/layout.component.html
+++ b/src/app/ui/layout/layout.component.html
@@ -1,4 +1,7 @@
-<app-header></app-header>
-  <ng-content></ng-content>
-<app-footer></app-footer>
-
+  <div style="min-height: 87.5%; max-width: 100vw; max-height: 100vh;">
+  <app-header></app-header>
+  <div class="container">
+    <ng-content></ng-content>
+  </div>
+  </div>
+  <!-- <app-footer></app-footer> -->
