--- a/src/styles.css
+++ b/src/styles.css
@@ -2,7 +2,7 @@
 @import "~bootstrap/dist/css/bootstrap.css";
 @import "~font-awesome/css/font-awesome.css";
 
-@keyframes fadeIn {
+@keyframes fadeup {
     from {
         transform: translate3d(0, 50px,0)
     }
@@ -13,17 +13,32 @@
     }
 }
 
+@keyframes fadein {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+   }
+
 .animated {
-    animation-duration: 1s;
+    animation-duration: 2.5s;
     animation-fill-mode: both;
-    -webkit-animation-duration: 1s;
+    -webkit-animation-duration: 2.5s;
     -webkit-animation-fill-mode: both
 }
 
-.fadeIn {
+.fadeup {
     opacity: 0;
-    animation-name: fadeIn;
-    -webkit-animation-name: fadeIn;
+    animation-name: fadeup;
+    -webkit-animation-name: fadeup;
+}
+
+.fadein {
+    opacity: 0;
+    animation-name: fadein;
+    -webkit-animation-name: fadein;
 }
 
 h3 {
