--- a/src/app/ui/experience/experience.component.html
+++ b/src/app/ui/experience/experience.component.html
@@ -18,8 +18,10 @@
       </a>
      
     </div>
-    <div class="button-container row experience-list">
-      <button class="experience-button">Download Resume</button>
+    <div class="row experience-list button">
+      <div class="text-center">
+        <a class="btn btn-dark text-white">Download Resume</a>
+      </div>
     </div>
   </div>
     <!--Put in download experience button-->
