--- a/src/app/ui/header/header.component.html
+++ b/src/app/ui/header/header.component.html
@@ -10,12 +10,12 @@
   </div>
   <div class="navbar-expand navbar-nav">
     <div class="navbar-nav">
-      <a class="nav-item nav-link" href="https://www.linkedin.com/in/nickolas-palmer-b17a9212b/">
+      <a class="nav-item nav-link" target="_blank" href="https://www.linkedin.com/in/nickolas-palmer-b17a9212b/">
         <i class="fa fa-lg fa-linkedin"></i>
       </a>
     </div>
     <div class="navbar-nav">
-      <a class="nav-item nav-link" href="https://github.com/palmernickolas">
+      <a class="nav-item nav-link" target="_blank" href="https://github.com/palmernickolas">
         <i class="fa fa-lg fa-github"></i>
       </a>
     </div>
