--- a/src/app/ui/projects/projects.component.html
+++ b/src/app/ui/projects/projects.component.html
@@ -7,7 +7,7 @@
         <div class="animated fadeup text-white">
           <h5 class="card-title">My Website</h5>
           <p class="card-text">Created January 2019</p>
-          <p class="card-text">Created this website to serve as a way of demonstrating my past software development experiences.
+          <p class="card-text">Created this website to show my past software development experiences.
             Built in Angular with Bootstrap and TypeScript.
           </p>
         </div>
@@ -23,35 +23,32 @@
             2019 semester.
           </p>
           <div class="text-center">
-            <a href="http://web.cse.ohio-state.edu/~boggus.2/3902/" class="btn btn-dark">Course Website</a>
+            <a target="_blank" href="http://web.cse.ohio-state.edu/~boggus.2/3902/" class="btn btn-dark">Course Website</a>
           </div>
         </div>
       </div>
     </div>
      <div class="card bg-dark col-lg-3">
-      <img class="card-img-top" src="assets/img/fpd_stats.png">
+      <img class="card-img-top" src="assets/img/mlb.png">
       <div class="card-body">
         <div class="animated fadeup text-white">
-          <h5 class="card-title">FPD Stats</h5>
-          <p class="card-text">Early 2020</p>
-          <p class="card-text">FPD Stats is a statistics tracking project. Over the next few months, a friend and I will
-            be building out an application that shows shots on goal and other statistics on a hockey rink. A UI for 
-            the game statistics recorder will be built to allow drag and drop actions that replicate on the end-user's screen.
+          <h5 class="card-title">MLB Scores Vue App</h5>
+          <p class="card-text">April 2020</p>
+          <p class="card-text">Created a simple Vue application to view all MLB scores from a given day. Will eventually be branching out into displaying scores from the NFL, NHL, and NBA as well.
           </p>
         </div>
       </div>
     </div>
     <div class="card bg-light col-lg-3">
-      <img class="card-img-top" src="assets/img/mario1.png">
+      <img class="card-img-top" src="assets/img/capstone.png">
       <div class="card-body">
         <div class="animated fadeup">
-          <h5 class="card-title">Super Mario Bros Recreation in C#</h5>
-          <p class="card-text">January 2019 - April 2019</p>
-          <p class="card-text">Using C#, Visual Studio, and Monogame my group recreated multiple levels of the original Super Mario Bros game during the Spring
-            2019 semester.
+          <h5 class="card-title">Senior Capstone Project</h5>
+          <p class="card-text">January 2020 - April 2020</p>
+          <p class="card-text">Created data visualizations for the Funk Music Hall of Fame & Exhibition Center in Dayton, OH. Used the D3.js and VIS.js libraries to display large data sets stored in Neo4j database.
           </p>
           <div class="text-center">
-            <a href="http://web.cse.ohio-state.edu/~boggus.2/3902/" class="btn btn-dark">Course Website</a>
+            <a target="_blank" href="https://sites.google.com/site/cse5911capstonesummer2014/" class="btn btn-dark">Course Website</a>
           </div>
         </div>
       </div>
