--- a/src/app/ui/contact/contact.component.html
+++ b/src/app/ui/contact/contact.component.html
@@ -2,26 +2,29 @@
   <section class="animated fadein bg-dark">
     <div class="container">
       <h1 class="text-white">Contact Me</h1>
-      <form (ngSubmit)="submitForm(nameInput, emailInput, userMessageInput)">
+      <form [formGroup]="formGroup" name="formGroup" (ngSubmit)="submitForm(nameInput, emailInput, userMessageInput)">
         <div class="field">
-          <input type="text" name="name" class="input" [(ngModel)]="name" placeholder="Your Name" #nameInput="ngModel" required>
+          <input type="text" id="name" (change)="onNameChange($event)" name="name" class="input" [(ngModel)]="name" placeholder="Your Name" #nameInput="ngModel" required [ngModelOptions]="{standalone: true}">
         </div>
         <div class="text-white error" *ngIf="nameInput.invalid && nameInput.dirty">
           Name is required.
         </div>
         <div class="field">
-          <input type="email" name="email" class="input" [(ngModel)]="email" placeholder="Your Email" #emailInput="ngModel" email required>
+          <input type="email" id="email" (change)="onEmailChange($event)" name="email" class="input" [(ngModel)]="email" placeholder="Your Email" #emailInput="ngModel" email required [ngModelOptions]="{standalone: true}">
         </div>
         <div class="text-white error" *ngIf="emailInput.invalid && emailInput.dirty">
           Email is required and must be valid.
         </div>
         <div class="field">
-          <textarea class="textarea" name="user_message"[(ngModel)]="user_message"  placeholder="Your message" #userMessageInput="ngModel" required></textarea>
+          <textarea class="textarea" id="message" (change)="onMessageChange($event)" name="user_message" [(ngModel)]="user_message"  placeholder="Your message" #userMessageInput="ngModel" required [ngModelOptions]="{standalone: true}"></textarea>
         </div>
         <div class="text-white error" *ngIf="userMessageInput.invalid && userMessageInput.dirty">
-          A message is required
+          A message is required.
         </div>
         <button type="submit" class="btn btn-light">Send Message</button>
+        <div class="text-white thanks-msg" *ngIf="messageSent">
+          Thanks for contacting me! I'll get back to you as soon as I can.
+        </div>
       </form>
     </div>
     </section>
