--- a/src/app/ui/header/header.component.html
+++ b/src/app/ui/header/header.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-dark bg-dark mb-5">
-  <a class="navbar-brand" routerLink="/home">Nick Palmer</a>
+  <a class="navbar-brand navbar-nav" routerLink="/home">Nick Palmer</a>
   <div class="navbar-expand navbar-nav">
     <div class="navbar-nav">
       <a routerLink="/home" class="nav-item nav-link">Home</a>
