--- a/src/app/ui/experience/experience.component.html
+++ b/src/app/ui/experience/experience.component.html
@@ -20,7 +20,7 @@
     </div>
     <div class="row experience-list button">
       <div class="text-center">
-        <a class="btn btn-dark text-white">Download Resume</a>
+        <a href="assets/files/Resume_Nickolas_Palmer.pdf" download class="btn btn-dark text-white">Download Resume</a>
       </div>
     </div>
   </div>
