updated with new job info and resume

--- a/src/app/ui/about/about.component.html
+++ b/src/app/ui/about/about.component.html
@@ -3,7 +3,7 @@
       <div class="about-content">
         <span class="about-sentence">My name is Nick Palmer and I'm a software developer.<br></span>
         <span class="middle-sentence">In May 2020, I graduated with a Bachelor of Science in Computer Science & Engineering from The Ohio State University.</span>
-        <br><span class="about-sentence">I now live in Chicago, IL.</span>
+        <br><span class="about-sentence">I am currently an Enterprise Developer at <a target="_blank" href="https://www.impactmybiz.com/">Impact Networking.</a></span>
   </div>
   </div>
 </app-layout>
