--- a/src/app/ui/experience/experience.component.html
+++ b/src/app/ui/experience/experience.component.html
@@ -4,19 +4,21 @@
       <h1 class="experience-title">
         Places I've Worked
       </h1>
-      <a href="https://transportation.ohio.gov/">
+      <a target="_blank" href="https://transportation.ohio.gov/">
       <img class="job-logo" src="../../../assets/img/odot.png"/>
       </a>
-      <a href="https://buildinmotion.com/">
+      <a target="_blank" href="https://buildinmotion.com/">
       <img class="job-logo" src="../../../assets/img/build-in-motion.png"/>
       </a>
-      <a href="https://www.hondaresearch.com/">
+      <a target="_blank" href="https://www.hondaresearch.com/">
       <img class="job-logo" src="../../../assets/img/honda.png"/>
       </a>
-      <a href="https://www.thedevshop.com/">
+      <a target="_blank" href="https://www.thedevshop.com/">
       <img class="job-logo" src="../../../assets/img/the-dev-shop.png"/>
       </a>
-     
+      <a target="_blank" href="https://www.impactmybiz.com/">
+        <img class="job-logo" src="../../../assets/img/impact_logo.png"/>
+      </a>
     </div>
     <div class="row experience-list button">
       <div class="text-center">
