--- a/src/app/ui/projects/projects.component.css
+++ b/src/app/ui/projects/projects.component.css
@@ -1,20 +1,18 @@
+.row {
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    padding: 25px;
+}
+
 img {
     margin-top: 10px;
-    width: 100%;
+    max-width: 350px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .card {
-    margin: 10px;
-    height: 60vh;
-    overflow: scroll;
-}
-
-.row {
-    align-items: center;
-    align-content: center;
-    justify-items: center;
-    display: flex;
-    justify-content: space-around;
-    flex-direction: row;
-    padding: 25px;
+    margin: 20px;
 }
