--- a/src/app/ui/projects/projects.component.html
+++ b/src/app/ui/projects/projects.component.html
@@ -34,7 +34,8 @@
         <div class="animated fadeup text-white">
           <h5 class="card-title">MLB Scores Vue App</h5>
           <p class="card-text">April 2020</p>
-          <p class="card-text">Created a simple Vue application to view all MLB scores from a given day. Will eventually be branching out into displaying scores from the NFL, NHL, and NBA as well.
+          <p class="card-text"><a target="_blank" href="https://sports-scores.xyz/">Site Link</a></p>
+          <p class="card-text">Created a simple Vue application to view all MLB scores from a given day. User authentication was added through Google Firebase. For user credentials please contact me <a routerLink="/contact"> here.</a>
           </p>
         </div>
       </div>
@@ -45,7 +46,19 @@
         <div class="animated fadeup">
           <h5 class="card-title">Senior Capstone Project</h5>
           <p class="card-text">January 2020 - April 2020</p>
-          <p class="card-text">Created data visualizations for the Funk Music Hall of Fame & Exhibition Center in Dayton, OH. Used the D3.js and VIS.js libraries to display large data sets stored in Neo4j database.
+          <p class="card-text">My capstone team created data visualizations for the Funk Music Hall of Fame & Exhibition Center in Dayton, OH. We used the D3.js and VIS.js libraries to display large data sets stored in Neo4j database. 
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="card bg-dark col-lg-3">
+      <img class="card-img-top" src="assets/img/simon.png">
+      <div class="card-body">
+        <div class="animated fadeup text-white">
+          <h5 class="card-title">Simon Game Clone</h5>
+          <p class="card-text">June 2020</p>
+          <p class="card-text"><a target="_blank" href="https://simon-game.fun/">Game Link</a></p>
+          <p class="card-text">Created a Simon game clone to obtain more experience with React. User authentication was added through Google Firebase. For user credentials please contact me <a routerLink="/contact"> here.</a>
           </p>
         </div>
       </div>
