update job title

--- a/src/app/ui/about/about.component.html
+++ b/src/app/ui/about/about.component.html
@@ -1,9 +1,9 @@
 <app-layout>
     <div class="animated fadeup about-me-container">
       <div class="about-content">
-        <span class="about-sentence">My name is Nick Palmer and I'm a software developer.<br></span>
-        <span class="middle-sentence">In May 2020, I graduated with a Bachelor of Science in Computer Science & Engineering from The Ohio State University.</span>
-        <br><span class="about-sentence">I am currently an Enterprise Developer at <a target="_blank" href="https://www.impactmybiz.com/">Impact Networking.</a></span>
+        <span class="about-sentence">Hi! My name is Nick, and I am a software engineer based in Chicago, IL.<br></span>
+        <span class="middle-sentence">I recently joined <a target="_blank" href="https://www.capitalone.com/">Capital One</a> as a Senior Associate Software Engineer.</span>
+        <br><span class="about-sentence">If you'd like to get in touch with me, please fill out the form on the <a routerLink="/contact">contact page</a>.</span>
   </div>
   </div>
 </app-layout>
